<resources>
    <string name="app_name">Reto dos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_add">Agregar</string>

    <string name="menu_home">Home</string>
    <string name="menu_productos">menu_productos</string>

    <string name="menu_servicios">Servicios</string>
    <string name="menu_sucursales">Sucursales</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Productos -->
    <string name="nameP1">Azul</string>
    <string name="descriptionP1">Camisa Unicolor</string>
    <string name="precioP1">25.000</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_codigo">codigo producto</string>
    <string name="txt_descripcion">descripcion</string>
    <string name="txt_precio">precio producto</string>
    <string name="BotonRegistrar">Registrar producto</string>
    <string name="BotonBuscar">buscar producto</string>
    <string name="BotonModificar">modificar producto</string>
    <string name="BotonEliminar">eliminar producto</string>
</resources>